RESOLVED FIXED30031
Setting zero size on a container of a video element doesn't hide the controller
https://bugs.webkit.org/show_bug.cgi?id=30031
Summary Setting zero size on a container of a video element doesn't hide the controller
Simon Fraser (smfr)
Reported 2009-10-02 15:39:30 PDT
Created attachment 40552 [details] Testcase Sometimes setting a zero height and width on an overflow:hidden div which is the parent of a <video> doesn't correctly hide the controller. <rdar://problem/7132801>
Attachments
Testcase (883 bytes, text/html)
2009-10-02 15:39 PDT, Simon Fraser (smfr)
no flags
Patch (7.33 KB, patch)
2009-10-02 15:44 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-10-02 15:44:46 PDT
Simon Fraser (smfr)
Comment 2 2009-10-02 16:03:31 PDT
Note You need to log in before you can comment on or make changes to this bug.